templates/deployment/types/node-port/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: echo-server-node-port
  labels:
    app: echo-server-node-port
spec:
  template:
    metadata:
      name: echo-server-node-port
      labels:
        app: echo-server-node-port
    spec:
      containers:
        - image: inanimate/echo-server
          imagePullPolicy: IfNotPresent
          name: echo-server-node-port
          resources:
            requests:
              cpu: 10m
              memory: 8Mi
            limits:
              cpu: 20m
              memory: 16Mi
      restartPolicy: Always
  selector:
    matchLabels:
      app: echo-server-node-port

---
apiVersion: v1
kind: Service
metadata:
  name: echo-server-node-port
spec:
  selector:
    app: echo-server-node-port
  ports:
    - port: 8080
  type: ClusterIP
