templates/deployment/types/node-port/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-node-port
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /node-port
        pathType: Prefix
        backend:
          service:
            name: echo-server-node-port
            port:
              number: 8080
